letters of word are shown empty, lives are deducted if wrong key pressed. Key can't be pressed multiple times resulting in multiple lives lost etc...

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <p class="txt">Type with your keyboard to try and guess the word!</p>
     <div class="alphabet" id="alphabet-container"></div>
+    <div class="guess" id="guess"></div>
     <script src="hangman.js"></script>
   </body>
 </html>
