--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Hangman game</title>
   </head>
   <body>
-    <h1 class="title">HANGMAN - built with vanilla javascript</h1>
+    <h1 class="title">HANGMAN - built with vanilla js</h1>
     <div class="lives-container">
       <img src="assets/heart.png" alt="Heart icon representing lives" class="heart" id="heart" />
       <img
