can't type further if game is won + gives word definition

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <p class="txt">Type with your keyboard to try and guess the word!</p>
     <div class="alphabet" id="alphabet-container"></div>
     <div class="guess" id="guess"></div>
-    <script src="hangman.js"></script>
+    <small id="guess-definition"></small>
+    <script type="module" src="hangman.js"></script>
   </body>
 </html>
