--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     />
     <link rel="stylesheet" href="index.css" />
 
-    <title>Hangman game</title>
+    <title>Word guess game</title>
   </head>
   <body>
-    <h1 class="title">HANGMAN - built with vanilla js</h1>
+    <h1 class="title">WORD GUESS - built with vanilla js</h1>
     <div class="lives-container">
       <img src="assets/heart.png" alt="Heart icon representing lives" class="heart" id="heart" />
       <img
@@ -30,6 +30,6 @@
     <div class="guess" id="guess"></div>
     <small id="guess-definition"></small>
 
-    <script type="module" src="hangman.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
