--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="index.css" />
 
-    <title>Word guess game</title>
+    <title>Word guessing game</title>
   </head>
   <body>
     <h1 class="title">WORD GUESS - built with vanilla js</h1>
