double script tag because netlify is bugging out... clear cache/deploy still wont work

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <small id="guess-definition"></small>
 
     <script type="module" src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
